# bme680-env-monitor

./: .gdb_history  .gdbinit  .gitignore  Cargo.toml  README.md  TODO.md  agp_memory_slot_0.x  build.rs  mem-at-slot-1.x  mem-w-bl.x  memory.x  normal-memory.x  test-agp-linker  write-to-flash-slot-0.sh  write-to-flash-slot-1.sh
.cargo/: config
bootloader/: Cargo.toml  README.md  build.rs  memory.x
bootloader/doc/: bootloader_startup.puml
bootloader/src/: config.rs  main.rs
bootloader/src/net/: eth.rs
bootloader/src/tasks/: mod.rs
src/: config.rs  logger.rs  main.rs
src/net/: eth.rs
src/sensors/: bme680.rs  mod.rs
src/tasks/: bme680.rs  data_manager.rs  mod.rs  update_manager.rs  watchdog.rs
