[package]
name = "bme680-env-monitor"
version = "0.2.1"
edition = "2021"
authors = ["Jon Lamb"]
build = "build.rs"

[[bin]]
name = "bme680-env-monitor"
path = "src/main.rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtic-monotonic = "1.0"
cortex-m-rtic = "1.1"
log = "0.4"
static_assertions = "1.1"
bme680 = "0.6"

# TODO - testing
[dependencies.agp-bootloader]
path = "../air-gradient-pro-rs/bootloader"

[dependencies.wire-protocols]
#git = "https://github.com/jonlamb-gh/air-gradient-pro-rs.git"
#branch = "master"
path = "../air-gradient-pro-rs/libraries/wire-protocols"

[dependencies.bootloader-support]
path = "../air-gradient-pro-rs/libraries/bootloader-support"

[dependencies.update-manager]
path = "../air-gradient-pro-rs/libraries/update-manager"

# TODO - upstream these changes
[dependencies.enc28j60]
git = "https://github.com/jonlamb-gh/enc28j60.git"
branch = "cleanup"

[dependencies.stm32f4xx-hal]
version = "0.15"
features = ["rt", "stm32f411", "rtic"]

[dependencies.smoltcp]
version = "0.9"
default-features = false
features = [
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    #"log",
    #"verbose"
]

[build-dependencies.built]
version = "0.5"
features = ["git2", "chrono"]

[build-dependencies.env-config]
git = "https://github.com/jonlamb-gh/air-gradient-pro-rs.git"
branch = "master"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
